# advanced_spark_sql_for_data_engineers

./: .gitignore  README.md  cte_v_temp_table.ipynb  docker-compose.yml  generate_data.py  joins.ipynb  main.py  pyproject.toml
notebooks/: 0-basics.ipynb  SOLUTIONS_adv_joins_group_by.ipynb  Untitled.ipynb  adv_joins_group_by.ipynb  basics.ipynb  generate_data.py  joins-group-by.ipynb  joins_group_by.ipynb  run_ddl.py  workshop.ipynb
notebooks/1-data-model/: data-model.ipynb
notebooks/2-advanced-sql/: advanced-sql.ipynb
notebooks/3-query-plan/: query-plan.ipynb
notebooks/4-data-process/: data-process.ipynb
notebooks/5-data-storage/: data-storage.ipynb
notebooks/6-3-hop-architecture/: 3-hop-architecture.ipynb
notebooks/7-clean-sql/: clean-sql.ipynb
notebooks/data-quality/: data-quality.ipynb
notebooks/old/: joins-group-by-old.ipynb
setup/: create_tpch_data.py
