[project]
name = "advanced-spark-sql-for-data-engineers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.0",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.3",
    "loguru>=0.7.3",
    "pyspark-client>=4.0.0",
    "pyspark-connect>=4.0.0",
    "pyspark[sql]>=4.0.0",
]
